--- a/chatbot.css
+++ b/chatbot.css
@@ -1,5 +1,5 @@
 .header {
-    background-color: #E0FFE0;
+    background-color:	#ffcccc;
 }
 
 h4 {
@@ -12,10 +12,10 @@ h4 {
     -moz-border-radius: 5;
     border-radius: 5px;
     font-family: Arial;
-    color: #ffffff;
+    color: #ffb3b3;
     font-size: 14px;
     font-weight: normal;
-    background: #4caae8;
+    background: #ffcccc;
     padding: 5px;
     text-decoration: none;
     width: 18%;
